--- a/MyWebSite/MyWebSite.csproj
+++ b/MyWebSite/MyWebSite.csproj
@@ -240,6 +240,7 @@
     <Content Include="Content\Images\vd_dis.JPG" />
     <Content Include="Content\Images\we.jpg" />
     <Content Include="Content\reports.css" />
+    <Content Include="Content\voting.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\Files\newraider.docx" />
@@ -270,6 +271,8 @@
     <Content Include="Views\Home\Bio.cshtml" />
     <Content Include="Views\Home\Concerts.cshtml" />
     <Content Include="Views\Users\EditReport.cshtml" />
+    <Content Include="Views\Users\Voting.cshtml" />
+    <Content Include="Views\Home\Vote.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
