--- a/MyWebSite/Web.config
+++ b/MyWebSite/Web.config
@@ -63,10 +63,10 @@
   </system.web>
   <system.webServer>
 	  <security>
-		  <ipSecurity allowUnlisted="true">
+		  <!--<ipSecurity allowUnlisted="true">
 			  <clear/>
 			  <add ipAddress="146.185.0.0" subnetMask="255.255.0.0" allowed="false" />
-		  </ipSecurity>
+		  </ipSecurity>-->
 	  </security>
 	  <validation validateIntegratedModeConfiguration="false" />
     <handlers>
