XML view for vote results
Added XML view for vote results
New base for music preferences
Bases Music_pref and Voting are linked together

--- a/MyWebSite/MyWebSite.csproj
+++ b/MyWebSite/MyWebSite.csproj
@@ -273,6 +273,8 @@
     <Content Include="Views\Users\EditReport.cshtml" />
     <Content Include="Views\Users\Voting.cshtml" />
     <Content Include="Views\Home\Vote.cshtml" />
+    <Content Include="Views\Home\Voted.cshtml" />
+    <Content Include="Views\Home\VoteResult.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
