--- a/MyWebSite/Web.config
+++ b/MyWebSite/Web.config
@@ -23,7 +23,7 @@
   </appSettings>
   <system.web>
 	<customErrors mode="Off"/>
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" requestValidationMode="2.0"/>
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
