--- a/MyWebSite/Web.config
+++ b/MyWebSite/Web.config
@@ -64,7 +64,7 @@
   <system.webServer>
 	  <security>
 	  	  <ipSecurity allowUnlisted="false">
-		  <clear/>
+		  <!--<clear/>-->
 		  <!--<add ipAddress="146.185.0.0" subnetMask="255.255.0.0" allowed="false" />-->
 		  </ipSecurity>
 	  </security>
